# wow-classic-fishing-bot

./: .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  wow-fishing.py
